Update presenter info: Add Janet Zentel and www.KI-Update.com

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <source src="ki_update_podcast.wav" type="audio/wav">
                     Ihr Browser unterstützt das Audio-Element nicht.
                 </audio>
-                <p class="podcast-info">Präsentiert von Roger Basler de Roca</p>
+                <p class="podcast-info">präsentiert von www.KI-Update.com mit Janet Zentel und Roger Basler de Roca</p>
             </div>
         </section>
 
